[project]
name = "taskflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mohammed-ysn", email = "mohammedysn15@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
taskflow = "taskflow:main"

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
